[project]
name = "opensearch-agent-tools-mcp"
version = "0.9.0"
description = "Agent-focused MCP server for OpenSearch ML agent APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "boto3>=1.38.3",
    "mcp[cli]>=1.9.4",
    "opensearch-py==3.1.0",
    "pydantic>=2.11.3",
    "requests-aws4auth>=1.3.1",
    "semver>=3.0.4",
    "pyjwt>=2.12.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.50.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
markers = [
    "eval: marks tests as LLM eval tests that call the Anthropic API (run with --run-evals)",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[project.scripts]
opensearch-agent-tools-mcp = "mcp_server_opensearch:main"

[project.urls]
Homepage = "https://example.com/opensearch-agent-tools-mcp"
